--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
-  namespace: default
+  name: hello-world-svc
+  namespace: infra-env
 spec:
   selector:
     app: hello-world
