--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hello-world
   labels:
     app: hello-world
-  namespace: infra-env
+  namespace: staging
 spec:
   replicas: 1
   selector:
