--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: hello-world
-  namespace: infra-env
+  namespace: staging
 spec:
   entryPoints:
     - web
