--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world-svc
-  namespace: infra-env
+  namespace: staging
 spec:
   selector:
     app: hello-world
